--- a/projeto-cordel/estilo/style.css
+++ b/projeto-cordel/estilo/style.css
@@ -60,6 +60,10 @@ section {
   font-size: 3.5vw;
 }
 
+section > p {
+  padding-bottom: 2em;
+}
+
 section.normal {
   background-color: white;
   color: black;
@@ -68,12 +72,25 @@ section.normal {
 section.imagem {
   background-color: rgb(104, 102, 102);
   color: white;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.493);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 section.imagem > p {
   display: inline-block;
   padding: 5px;
-  background-color: rgb(0, 0, 0, 0.253);
+  background-color: rgb(0, 0, 0, 0.514);
+  text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+  background-image: url('../imagens/background001.jpg');
+  background-position: right center;
+}
+
+section#img02 {
+  background-image: url('../imagens/background002.jpg');
 }
 
 footer {
